@@ -4,8 +4,10 @@ by Alex Rabe & NextGEN DEV Team
 = V1.5.0 - soon =
 * NEW : Backup and Recover function for images (THX to Simone Fumagalli)
 * NEW : Resize images after upload (THX to Simone Fumagalli)
+* NEW : Added a JSON class for fetching galleries in a RESTful way
 * Changed : Rename query var from slideshow to imagerotator for compat reason with other plugin
 * Changed : Convert widget function to new WP structure
+* Changed : Include lookup for tags into the backend search 
 * Bugfix : Select album preview from gallery preview pics instead random list
 * Bugfix : Keep fix dimension in edit thumbnail operation
 * Bugfix : Import meta data didn't work correct for existing images
